# src/routes/SessionRoute.ts
@@ -1,0 +1,9 @@
+import { Router } from "express";
+import { SessionController } from "../controllers/auth/Session";
+
+
+const sessionRoute = Router();
+
+sessionRoute.post("/session" , new SessionController().login);
+
+export {sessionRoute}
